--- a/WebAppBD2/Views/Home/Privacy.cshtml
+++ b/WebAppBD2/Views/Home/Privacy.cshtml
@@ -6,11 +6,11 @@
 <p>Вставить поставщика с заданными параметрами.</p>
 
 <form method="post">
-    <label>Укажите имя поставщика: </label>
-    <input type="text" name="name_post" maxlength="20"/> <br />
-    <label>Укажите рейтинг поставщика: </label>
-    <input type="number" name="reiting" max="2147483647" min="-2147483648" /> <br />
-    <label>Укажите город поставщика: </label>
-    <input type="text" name="town" maxlength="20" /> <br />
-    <button type="submit">Подтвердить<</button>
+    <label class="text-field__label">Укажите имя поставщика: </label>
+    <input class="text-field__input" type="text" name="name_post" maxlength="20" /> <br />
+    <label class="text-field__label">Укажите рейтинг поставщика: </label>
+    <input class="text-field__input" type="number" name="reiting" max="2147483647" min="-2147483648" /> <br />
+    <label class="text-field__label">Укажите город поставщика: </label>
+    <input class="text-field__input" type="text" name="town" maxlength="20" /> <br />
+    <button type="submit">Подтвердить</button>
 </form>
